fix SVG overlapping with right nav

--- a/docs/assets/scss/_styles_project.scss
+++ b/docs/assets/scss/_styles_project.scss
@@ -447,6 +447,10 @@ div#main_navbar {
 
 /******* For Inline SVG **********/
 
+svg.rrdiagram {
+  max-width: 100%;
+}
+
 .rrdiagram .connector {
   fill: none;
   stroke: #222;
